Silence warnings from Java 11